--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -8,7 +8,7 @@
       Temporarily disable cerner-smart-embeddable-lib
       <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
     -->
-    <title>MazikCare on FHIR</title>
+    <title>Example-SMART-App</title>
   </head>
   <body>
     <!-- Required JS files to enable this page to embed within an MPage -->
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': 'mazikcare_fhir_sampleid',
+        'client_id': '<enter your client id here>',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
