--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-    <title>MK FHIR</title>
+    <title>MazikCare on FHIR</title>
 
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
     <!--
@@ -20,7 +20,7 @@
       <div class="bounce3"></div>
     </div>
     <div id='holder' >
-      <h2>MK FHIR</h2>
+      <h2>MazikCare on FHIR</h2>
 
       <h2>Patient Resource</h2>
       <table>
