--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -65,6 +65,11 @@
           <td id='hdl'></td>
         </tr>
       </table>
+	  <h1>MazikCare on FHIR</h1>
+
+<iframe src="https://org410d3c2d.crm.dynamics.com/">
+  <p>Your browser does not support iframes.</p>
+</iframe>
     </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <!--
