--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -41,7 +41,7 @@
           <td id='birthdate'></td>
         </tr>
       </table>
-      <h2>Observation Resource</h2>
+   <!--   <h2>Observation Resource</h2>
       <table>
         <tr>
           <th>Height:</th>
@@ -65,9 +65,9 @@
           <td id='hdl'></td>
         </tr>
       </table>
-	  <h1>MazikCare on FHIR</h1>
+	  <h1>MazikCare on FHIR</h1> -->
 
-<iframe src="https://org410d3c2d.crm.dynamics.com/">
+<iframe src="https://org410d3c2d.crm.dynamics.com/" height="800" width="1200">
   <p>Your browser does not support iframes.</p>
 </iframe>
     </div>
