--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" hidden>
+<html lang="en">
   <head>
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
     <title>MazikCare on FHIR</title>
 
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
-     <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
-   
+    <!--
+      Temporarily disable cerner-smart-embeddable-lib
+      <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
+    -->
   </head>
   <body>
     <div id='errors'>
@@ -69,9 +71,13 @@
   <p>Your browser does not support iframes.</p>
 </iframe>
     </div>
-     <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
+    <!-- Required JS files to enable this page to embed within an MPage -->
+    <!--
+      Temporarily disable cerner-smart-embeddable-lib
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
       <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
-    
+    -->
+
     <!-- Application-level javascript-->
     <script src='./src/js/example-smart-app.js'></script>
 
