--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -43,14 +43,14 @@
 		<tr>
           <th>ICD:</th>
           <td id='icd'></td>
-		  <p>J12.89 for Pneumonia because of COVID-19</p>
+		</tr>		
+      </table>
+	  <p>J12.89 for Pneumonia because of COVID-19</p>
 		  <p>J20.8 for Acute Bronchitis because of COVID-19</p>
 		  <p>J22 for Lower Respiratory Infection because of COVID-19</p>
 		  <p>J80 for ARDS because of COVID-19</p>
-		  <p>Z20.828 for possible exposure but ruled out because of COVID-19</p>
-		  <p>Z03.818 for Pneumonia because of COVID-19</p>
-        </tr>
-      </table>
+		  <p>Z20.828 for possible exposure but ruled out because of COVID-19 came negative</p>
+		  <p>Z03.818 for exporse to COVID-19 confirmed</p>
       <h2>Observation Resource</h2>
       <table>
         <tr>
