added condition scope

--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -21,7 +21,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '644b5814-2205-4713-ada6-0bcb3ec5bc36',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read patient/Condition.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
