--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -42,6 +42,14 @@
           <td id='icd'></td>
 		</tr>		
       </table>
+	  <h2>Condition Resource</h2>
+      <table>
+        <tr>
+          <th>Height:</th>
+          <td id='height'></td>
+        </tr>        
+        </tr>
+      </table>
 	  <p>J12.89 for Pneumonia because of COVID-19</p>
 		  <p>J20.8 for Acute Bronchitis because of COVID-19</p>
 		  <p>J22 for Lower Respiratory Infection because of COVID-19</p>
