--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -27,7 +27,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '24808b74-86c7-492d-b348-9bb12e05dfe2',
-        'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read patient/Condition.read launch/patient online_access openid profile'
       });
     </script>
     <div class="spinner">
