Revert "Update index.html"
This reverts commit 238ba6510631e85080e5a778755c8e4b2f9fbab2.

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -81,16 +81,18 @@
         </tr>
       </table>
 	  <h1>MazikCare on FHIR</h1> 
-<!--
+
 <iframe src="https://org410d3c2d.crm.dynamics.com/" height="800" width="1200">
   <p>Your browser does not support iframes.</p>
 </iframe>
-    -->
-	</div>
+    </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
+    <!--
+      Temporarily disable cerner-smart-embeddable-lib
       <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
       <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
-    
+    -->
+
     <!-- Application-level javascript-->
     <script src='./src/js/example-smart-app.js'></script>
 
