--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -9,14 +9,14 @@
       <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
 
     
-  <body>
+  
     <!-- Required JS files to enable this page to embed within an MPage 
   
       <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
       <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
   -->
 <title>MazkCare on FHIR</title>
-  </head>
+  </head><body>
     <!-- FHIR Client JS Library -->
     <script src='./lib/js/fhir-client-v0.1.12.js'></script>
 
