--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -6,9 +6,7 @@
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
     <!--
       Temporarily disable cerner-smart-embeddable-lib
-      <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
-
-    
+      <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>   
   
     <!-- Required JS files to enable this page to embed within an MPage 
   
@@ -16,7 +14,8 @@
       <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
   -->
 <title>MazkCare on FHIR</title>
-  </head><body>
+  </head>
+  <body>
     <!-- FHIR Client JS Library -->
     <script src='./lib/js/fhir-client-v0.1.12.js'></script>
 
