icd repplaced with snomed

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -37,25 +37,31 @@
           <th>Date of Birth:</th>
           <td id='birthdate'></td>
         </tr>
-		<tr>
-          <th>ICD:</th>
-          <td id='icd'></td>
-		</tr>		
       </table>
 	  <h2>Condition Resource</h2>
       <table>
         <tr>
-          <th>Height:</th>
-          <td id='height'></td>
+          <th>Snomed:</th>
+          <td id='snomed'></td>
         </tr>        
         </tr>
       </table>
-	  <p>J12.89 for Pneumonia because of COVID-19</p>
-		  <p>J20.8 for Acute Bronchitis because of COVID-19</p>
-		  <p>J22 for Lower Respiratory Infection because of COVID-19</p>
-		  <p>J80 for ARDS because of COVID-19</p>
-		  <p>Z20.828 for possible exposure but ruled out because of COVID-19 came negative</p>
-		  <p>Z03.818 for exporse to COVID-19 confirmed</p>
+	  <p>SCTID	New description
+840533007	Severe acute respiratory syndrome coronavirus 2 (organism)
+840533007	SARS-CoV-2
+840536004	Antigen of severe acute respiratory syndrome coronavirus 2 (substance)
+840536004	Antigen of SARS-CoV-2
+840534001	Severe acute respiratory syndrome coronavirus 2 vaccination (procedure)
+840534001	SARS-CoV-2 vaccination
+840535000	Antibody to severe acute respiratory syndrome coronavirus 2 (substance)
+840535000	Antibody to SARS-CoV-2
+840546002	Exposure to severe acute respiratory syndrome coronavirus 2 (event)
+840546002	Exposure to SARS-CoV-2
+840539006	Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)
+840539006	COVID-19
+840544004	Suspected disease caused by severe acute respiratory coronavirus 2 (situation)
+840544004	Suspected disease caused by SARS-CoV-2
+</p>
       <h2>Observation Resource</h2>
       <table>
         <tr>
