--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -8,7 +8,7 @@
       Temporarily disable cerner-smart-embeddable-lib
       <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
     -->
-    <title>MazikCare on FHIR</title>
+    <title>Example-SMART-App</title>
   </head>
   <body>
     <!-- Required JS files to enable this page to embed within an MPage -->
@@ -26,8 +26,8 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '24808b74-86c7-492d-b348-9bb12e05dfe2',
-        'scope':  'patient/Patient.read patient/Observation.read patient/Condition.read launch/patient online_access openid profile'
+        'client_id': '8c057744-b0e4-4e98-aaeb-e451263a7235',
+        'scope':  'patient/Appointment.read patient/CarePlan.read patient/MedicationOrder.read patient/Patient.read patient/Observation.read patient/Patient.write launch online_access openid profile'
       });
     </script>
     <div class="spinner">
