--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -8,7 +8,7 @@
       Temporarily disable cerner-smart-embeddable-lib
       <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
     -->
-    <title>MazikCare on FHIR</title>
+    <title>Example-SMART-App</title>
   </head>
   <body>
     <!-- Required JS files to enable this page to embed within an MPage -->
@@ -17,6 +17,7 @@
       <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
       <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
     -->
+
     <!-- FHIR Client JS Library -->
     <script src='./lib/js/fhir-client-v0.1.12.js'></script>
 
@@ -25,8 +26,8 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '644b5814-2205-4713-ada6-0bcb3ec5bc36',
-        'scope':  'patient/Patient.read patient/Observation.read patient/Condition.read launch online_access openid profile'
+        'client_id': '8c057744-b0e4-4e98-aaeb-e451263a7235',
+        'scope':  'patient/Appointment.read patient/CarePlan.read patient/MedicationOrder.read patient/Patient.read patient/Observation.read patient/Patient.write launch online_access openid profile'
       });
     </script>
     <div class="spinner">
